# documentumd

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: clade_answer_gemini_invoice.py  invoice_batch_flow_processor.py  tmp.py
src/app/processors/: document_processor.py
src/app/tools/doc_proccesing/: __init__.py  base_llm_tool.py  claude_vertex_tool.py  custom_tool_crewai.py  document_processor.py  gemini_vertex_tool.py  gpt_tool.py
src/app/tools/ontology/: ontologyLoader.py
src/app/tools/ontology/templates/: gemini_ontology_template.txt
src/flows/ontology/: ontology_builder_flow.py
src/prompts/: claude_prompt.txt  gemini_prompt.txt
tests/: conftest.py  test_gemini_vertex_tool.py  test_invoice_batch_processor.py
tests/ontology_creating/: creating.prompt.txt
tests/prompt_creating/: invoice_prompt.txt
